Mandate mariadb10 and add mariadb client jdbc driver

--- a/dev/docker-compose-dev-setup.yml
+++ b/dev/docker-compose-dev-setup.yml
@@ -36,7 +36,7 @@ services:
 
   jc_mysql:
     container_name: jc_mysql
-    image: mariadb:latest
+    image: mariadb:10
     restart: 'no'
     environment:
       MYSQL_ROOT_PASSWORD: jc
