--- a/kbplus/build.gradle
+++ b/kbplus/build.gradle
@@ -75,6 +75,9 @@ dependencies {
     testImplementation "org.seleniumhq.selenium:selenium-support:4.0.0"
     testRuntimeOnly "org.seleniumhq.selenium:selenium-chrome-driver:4.0.0"
     testRuntimeOnly "org.seleniumhq.selenium:selenium-firefox-driver:4.0.0"
+
+    runtime 'org.mariadb.jdbc:mariadb-java-client:3.1.0'
+
 }
 
 bootRun {
