--- a/kbplus/build.gradle
+++ b/kbplus/build.gradle
@@ -2,6 +2,7 @@ buildscript {
     repositories {
         maven { url "https://plugins.gradle.org/m2/" }
         maven { url "https://repo.grails.org/grails/core" }
+        maven { url "https://nexus.k-int.com/content/groups/public/" }
     }
     dependencies {
         classpath "org.grails:grails-gradle-plugin:$grailsGradlePluginVersion"
@@ -25,6 +26,7 @@ apply plugin:"com.bertramlabs.asset-pipeline"
 repositories {
     mavenCentral()
     maven { url "https://repo.grails.org/grails/core" }
+    maven { url "https://nexus.k-int.com/content/groups/public/" }
 }
 
 configurations {
@@ -93,6 +95,10 @@ dependencies {
     }
     implementation 'net.sf.jasperreports:jasperreports:6.20.0'
     implementation 'com.lowagie:itext:2.1.7'
+    implementation ('com.k-int:goai:1.0.2') {
+      exclude module: 'groovy'
+    }
+    implementation 'org.grails.plugins:spring-security-core:5.1.1'
 }
 
 bootRun {
