--- a/kbplus/build.gradle
+++ b/kbplus/build.gradle
@@ -123,15 +123,16 @@ tasks.withType(Test) {
     useJUnitPlatform()
 }
 
-webdriverBinaries {
-    if (!System.getenv().containsKey('GITHUB_ACTIONS')) {
-        chromedriver {
-            version = '2.45.0'
-            fallbackTo32Bit = true
-        }
-        geckodriver '0.30.0'
-    }
-}
+
+// webdriverBinaries {
+//     if (!System.getenv().containsKey('GITHUB_ACTIONS')) {
+//         chromedriver {
+//             version = '2.45.0'
+//             fallbackTo32Bit = true
+//         }
+//         geckodriver '0.30.0'
+//     }
+// }
 
 tasks.withType(Test) {
     systemProperty "geb.env", System.getProperty('geb.env')
