--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -14,6 +14,7 @@ jobs:
         with:
           java-version: '17'
           distribution: 'temurin'
+          cache: 'gradle'
       - name: Validate Gradle wrapper
         uses: gradle/wrapper-validation-action@e6e38bacfdf1a337459f332974bb2327a31aaf4b
       # - name: Start containers
@@ -31,7 +32,7 @@ jobs:
         uses: gradle/gradle-build-action@0d13054264b0bb894ded474f08ebb30921341cee
         with:
           arguments: build -x integrationTest
-          build-root-directory: service
+          build-root-directory: kbplus
       # - name: Publish Test Results
       #   uses: EnricoMi/publish-unit-test-result-action@v1
       #   if: always()
