--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -15,6 +15,7 @@ jobs:
           java-version: '17'
           distribution: 'temurin'
           cache: 'gradle'
+          architecture: x64
       - name: Validate Gradle wrapper
         uses: gradle/wrapper-validation-action@v1
       # - name: Start containers
