--- a/kbplus/gradle.properties
+++ b/kbplus/gradle.properties
@@ -3,5 +3,5 @@ grailsGradlePluginVersion=5.2.4
 groovyVersion=3.0.11
 gorm.version=7.3.2
 org.gradle.parallel=true
-org.gradle.jvmargs=-Dfile.encoding=UTF-8
+org.gradle.jvmargs=-Xmx4608m -XX:MaxPermSize=2048m -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8
 org.gradle.daemon=false
