--- a/kbplus/gradle.properties
+++ b/kbplus/gradle.properties
@@ -2,6 +2,7 @@ grailsVersion=5.2.5
 grailsGradlePluginVersion=5.2.4
 groovyVersion=3.0.11
 gorm.version=7.3.2
-org.gradle.daemon=true
-org.gradle.parallel=true
-org.gradle.jvmargs=-Dfile.encoding=UTF-8 -Xmx1024M
+org.gradle.daemon=false
+org.gradle.parallel=false
+org.gradle.jvmargs=-Dfile.encoding=utf-8 -Dorg.gradle.native=false
+file.encoding=utf-8
