--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -36,4 +36,4 @@ jobs:
 
     - name: Build
       working-directory: ./kbplus
-      run: ./gradlew clean --stacktrace --debug --no-daemon
+      run: ./gradlew clean build --stacktrace --info --no-daemon
