--- a/kbplus/gradle.properties
+++ b/kbplus/gradle.properties
@@ -2,7 +2,7 @@ grailsVersion=5.2.5
 grailsGradlePluginVersion=5.2.4
 groovyVersion=3.0.11
 gorm.version=7.3.2
-org.gradle.jvmargs=-Dfile.encoding=utf-8 -Dorg.gradle.native=false
+org.gradle.jvmargs=-Dfile.encoding=utf-8 -Dorg.gradle.native=false -Xmx4g
 file.encoding=utf-8
 org.gradle.parallel=false
 org.gradle.daemon=true
