--- a/kbplus/build.gradle
+++ b/kbplus/build.gradle
@@ -8,7 +8,8 @@ buildscript {
         classpath "org.grails:grails-gradle-plugin:$grailsGradlePluginVersion"
         classpath "gradle.plugin.com.github.erdi.webdriver-binaries:webdriver-binaries-gradle-plugin:2.6"
         classpath "org.grails.plugins:hibernate5:7.3.0"
-        classpath "com.bertramlabs.plugins:asset-pipeline-gradle:3.4.7"
+        // classpath "com.bertramlabs.plugins:asset-pipeline-gradle:3.4.7"
+        classpath "com.bertramlabs.plugins:asset-pipeline-gradle:4.0.0"
     }
 }
 
@@ -66,7 +67,8 @@ dependencies {
     runtimeOnly "com.h2database:h2"
     runtimeOnly "org.apache.tomcat:tomcat-jdbc"
     runtimeOnly "javax.xml.bind:jaxb-api:2.3.1"
-    runtimeOnly "com.bertramlabs.plugins:asset-pipeline-grails:3.4.7"
+    // runtimeOnly "com.bertramlabs.plugins:asset-pipeline-grails:3.4.7"
+    runtimeOnly "com.bertramlabs.plugins:asset-pipeline-grails:4.0.0"
     testImplementation "io.micronaut:micronaut-inject-groovy"
     testImplementation "org.grails:grails-gorm-testing-support"
     testImplementation "org.mockito:mockito-core"
@@ -101,8 +103,10 @@ dependencies {
     implementation 'org.grails.plugins:spring-security-core:5.1.1'
     implementation 'com.vladsch.flexmark:flexmark-all:0.64.0'
 
-    implementation 'com.bertramlabs.plugins:sass-asset-pipeline:3.4.7'
-    assets 'com.bertramlabs.plugins:sass-asset-pipeline:3.4.7'
+    // implementation 'com.bertramlabs.plugins:sass-asset-pipeline:3.4.7'
+    implementation 'com.bertramlabs.plugins:sass-asset-pipeline:4.0.0'
+    // assets 'com.bertramlabs.plugins:sass-asset-pipeline:3.4.7'
+    assets 'com.bertramlabs.plugins:sass-asset-pipeline:4.0.0'
 
 }
 
