--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -36,6 +36,4 @@ jobs:
 
     - name: Build
       working-directory: ./kbplus
-      run: ./gradlew --version
-      run: ./gradlew clean 
-      run: ./gradlew build --stacktrace --info --no-daemon
+      run: ./gradlew clean build --stacktrace --info --no-daemon
