--- a/dev/docker-compose-dev-setup.yml
+++ b/dev/docker-compose-dev-setup.yml
@@ -34,6 +34,7 @@ services:
           - eshost
           - elasticsearch
 
+  # Connect with mysql --protocol=tcp -h localhost -u k-int -p kbplus700dev
   jc_mysql:
     container_name: jc_mysql
     image: mariadb:10
@@ -43,6 +44,5 @@ services:
     volumes:
       - jc_mysqldata:/var/lib/mysql
       - ./mysqlinit:/docker-entrypoint-initdb.d
-
     ports:
       - 3306:3306
