Starting work on export

--- a/kbplus/grails-app/conf/application.yml
+++ b/kbplus/grails-app/conf/application.yml
@@ -114,6 +114,8 @@ dataSource:
 
 environments:
     development:
+        features:
+                - EXPORT
         localauth: true
         sysusers:
             - name: admin
