Add export feature and corresponding tile to instdash

--- a/kbplus/grails-app/conf/application.yml
+++ b/kbplus/grails-app/conf/application.yml
@@ -115,6 +115,8 @@ dataSource:
 environments:
     development:
         localauth: true
+        features:
+            - EXPORT
         sysusers:
             - name: admin
               pass: admin
