Spin up containers needed for testing

--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -34,6 +34,13 @@ jobs:
     - name: Setup Gradle
       uses: gradle/gradle-build-action@v2.2.0
 
+    - name: Start containers
+      run: |
+        cd dev
+        docker-compose -f docker-compose-dev-setup.yml down -v
+        docker-compose -f docker-compose-dev-setup.yml up -d
+        sleep 5
+
     - name: Build
       working-directory: ./kbplus
       run: ./gradlew clean build
