Skip integration tests

--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -43,4 +43,4 @@ jobs:
 
     - name: Build
       working-directory: ./kbplus
-      run: ./gradlew clean build
+      run: ./gradlew clean build -x integrationTest
