--- a/kbplus/build.gradle
+++ b/kbplus/build.gradle
@@ -9,6 +9,7 @@ buildscript {
         classpath "gradle.plugin.com.github.erdi.webdriver-binaries:webdriver-binaries-gradle-plugin:2.6"
         classpath "org.grails.plugins:hibernate5:7.3.0"
         classpath "com.bertramlabs.plugins:asset-pipeline-gradle:4.0.0"
+        classpath "org.ysb33r.gradle:grolifant50:2.0.0-alpha.6"
     }
 }
 
@@ -145,6 +146,11 @@ webdriverBinaries {
     }
 }
 
+integrationTest {
+    systemProperties System.properties
+}
+
+
 tasks.withType(Test) {
     systemProperty "geb.env", System.getProperty('geb.env')
     systemProperty "geb.build.reportsDir", reporting.file("geb/integrationTest")
@@ -156,7 +162,6 @@ tasks.withType(Test) {
         systemProperty 'webdriver.gecko.driver', "${System.getenv('GECKOWEBDRIVER')}/geckodriver"
     }
 }
-
 
 assets {
     minifyJs = true
