--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -15,11 +15,10 @@ jobs:
 
     - uses: actions/checkout@v3
 
-
     - name: Set up JDK 11
       uses: actions/setup-java@v3
       with:
-        java-version: 11
+        java-version: 17
         distribution: temurin
 
     - name: Validate Gradle wrapper
@@ -31,9 +30,17 @@ jobs:
         # echo "BUILD_NUMBER=${{github.run_id}}" >> $GITHUB_ENV
         echo "BUILD_NUMBER=${{github.run_number}}" >> $GITHUB_ENV
 
+    - name: Start containers
+      run: |
+        cd dev
+        docker-compose -f docker-compose-dev-setup.yml down -v
+        docker-compose -f docker-compose-dev-setup.yml up -d
+        sleep 5
+
+
     - name: Setup Gradle
       uses: gradle/gradle-build-action@v2.2.0
 
     - name: Build
       working-directory: ./kbplus
-      run: ./gradlew clean build
+      run: ./gradlew -Dgeb.env=firefoxHeadless clean build
