--- a/kbplus/build.gradle
+++ b/kbplus/build.gradle
@@ -155,13 +155,13 @@ integrationTest {
 tasks.withType(Test) {
     systemProperty "geb.env", System.getProperty('geb.env')
     systemProperty "geb.build.reportsDir", reporting.file("geb/integrationTest")
-    if (!System.getenv().containsKey('GITHUB_ACTIONS')) {
-        systemProperty 'webdriver.chrome.driver', System.getProperty('webdriver.chrome.driver')
-        systemProperty 'webdriver.gecko.driver', System.getProperty('webdriver.gecko.driver')
-    } else {
-        systemProperty 'webdriver.chrome.driver', "${System.getenv('CHROMEWEBDRIVER')}/chromedriver"
-        systemProperty 'webdriver.gecko.driver', "${System.getenv('GECKOWEBDRIVER')}/geckodriver"
-    }
+    // if (!System.getenv().containsKey('GITHUB_ACTIONS')) {
+    //     systemProperty 'webdriver.chrome.driver', System.getProperty('webdriver.chrome.driver')
+    //     systemProperty 'webdriver.gecko.driver', System.getProperty('webdriver.gecko.driver')
+    // } else {
+    //     systemProperty 'webdriver.chrome.driver', "${System.getenv('CHROMEWEBDRIVER')}/chromedriver"
+    //     systemProperty 'webdriver.gecko.driver', "${System.getenv('GECKOWEBDRIVER')}/geckodriver"
+    // }
 }
 
 assets {
