--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -43,4 +43,7 @@ jobs:
 
     - name: Build
       working-directory: ./kbplus
+      env:
+        NEXUS_USER: ${{ secrets.NEXUS_USER }}
+        NEXUS_PASS: ${{ secrets.NEXUS_PASS }}
       run: ./gradlew -Dgeb.env=firefoxHeadless clean build publishMavenPublicationToMaven-snapshotsRepository
