More work on exports

--- a/kbplus/grails-app/conf/application.yml
+++ b/kbplus/grails-app/conf/application.yml
@@ -242,5 +242,6 @@ grails:
 skin: live
 master: true
 docstoreDir: ./docstore
+exportsDir: ./exports
 doDocstoreMigration: false
 configValidation: Application
