--- a/kbplus/build.gradle
+++ b/kbplus/build.gradle
@@ -67,6 +67,7 @@ dependencies {
     runtimeOnly "org.glassfish.web:el-impl:2.2.1-b05"
     runtimeOnly "com.h2database:h2"
     runtimeOnly "org.apache.tomcat:tomcat-jdbc"
+    runtimeOnly "org.apache.tomcat:tomcat-jni:9.0.68"
     runtimeOnly "javax.xml.bind:jaxb-api:2.3.1"
     // runtimeOnly "com.bertramlabs.plugins:asset-pipeline-grails:3.4.7"
     runtimeOnly "com.bertramlabs.plugins:asset-pipeline-grails:4.0.0"
