--- a/kbplus/build.gradle
+++ b/kbplus/build.gradle
@@ -8,7 +8,7 @@ buildscript {
         classpath "org.grails:grails-gradle-plugin:$grailsGradlePluginVersion"
         classpath "gradle.plugin.com.github.erdi.webdriver-binaries:webdriver-binaries-gradle-plugin:2.6"
         classpath "org.grails.plugins:hibernate5:7.3.0"
-        classpath "com.bertramlabs.plugins:asset-pipeline-gradle:4.0.0"
+        classpath "com.bertramlabs.plugins:asset-pipeline-gradle:4.3.0"
         classpath "org.ysb33r.gradle:grolifant50:2.0.0-alpha.6"
     }
 }
@@ -22,7 +22,7 @@ apply plugin:"war"
 apply plugin:"org.grails.grails-web"
 apply plugin:"com.github.erdi.webdriver-binaries"
 apply plugin:"org.grails.grails-gsp"
-apply plugin:"com.bertramlabs.asset-pipeline"
+apply plugin: 'com.bertramlabs.asset-pipeline'
 apply plugin:"maven-publish"
 
 repositories {
@@ -69,8 +69,6 @@ dependencies {
     runtimeOnly "org.apache.tomcat:tomcat-jdbc"
     runtimeOnly "org.apache.tomcat:tomcat-jni:9.0.68"
     runtimeOnly "javax.xml.bind:jaxb-api:2.3.1"
-    // runtimeOnly "com.bertramlabs.plugins:asset-pipeline-grails:3.4.7"
-    runtimeOnly "com.bertramlabs.plugins:asset-pipeline-grails:4.0.0"
     testImplementation "io.micronaut:micronaut-inject-groovy"
     testImplementation "org.grails:grails-gorm-testing-support"
     testImplementation "org.mockito:mockito-core"
@@ -108,11 +106,18 @@ dependencies {
     implementation 'org.grails.plugins:spring-security-core:5.1.1'
     implementation 'com.vladsch.flexmark:flexmark-all:0.64.0'
 
-    // implementation 'com.bertramlabs.plugins:sass-asset-pipeline:3.4.7'
-    implementation 'com.bertramlabs.plugins:sass-asset-pipeline:4.0.0'
-    // assets 'com.bertramlabs.plugins:sass-asset-pipeline:3.4.7'
-    // assets 'com.bertramlabs.plugins:sass-asset-pipeline:4.0.0'
+    implementation 'com.bertramlabs.plugins:asset-pipeline-grails:4.3.0'
+    implementation 'com.bertramlabs.plugins:less-asset-pipeline:4.3.0'
+    implementation 'com.bertramlabs.plugins:sass-asset-pipeline:4.3.0'
+}
 
+war {
+    enabled = true
+    // archiveName "Wolf.war"
+}
+
+bootJar {
+  enabled=true
 }
 
 bootRun {
@@ -165,11 +170,39 @@ tasks.withType(Test) {
     // }
 }
 
+// assets {
+//     minifyJs = true
+//     minifyCss = true
+// }
 assets {
-    minifyJs = true
-    minifyCss = true
-}
+  minifyJs = true
+  minifyCss = true
+  enableSourceMaps = true
+  configOptions = [:]
+  
+  minifyOptions = [
+    languageMode: 'ES6',
+    targetLanguage: 'ES6', //Can go from ES6 to ES5 for those bleeding edgers
+    // optimizationLevel: 'SIMPLE',
+    // angularPass: true // Can use @ngInject annotation for Angular Apps
+  ]
+  
+  includes = []
+  excludes = ['**/*.sass'] //Example Exclude GLOB pattern
 
+  //for plugin packaging
+  packagePlugin=false //set to true if this is a library
+
+  //developmentRuntime can be turned off
+  developmentRuntime=true
+
+  //if you want to customize the jar task this task runs on you can specify a jarTaskName
+  // jarTaskName=null
+
+  // Can add custom asset locations (directories or individual jar files)
+  // from '/vendor/lib'
+  // from '/path/to/file.jar'
+}
 
 publishing {
    publications {
