--- a/kbplus/grails-app/conf/application.yml
+++ b/kbplus/grails-app/conf/application.yml
@@ -122,7 +122,7 @@ dataSource:
 environments:
     development:
         features:
-                - EXPORT
+            export: "ON"
         localauth: true
         sysusers:
             - name: admin
@@ -174,6 +174,8 @@ environments:
         # escluster: elasticsearch
         eshost: "${elasticsearch.service:localhost}"
         localauth: true
+        features:
+            export: "ON"
         dataSource:
             dbCreate: update
             # driverClassName: com.mysql.jdbc.Driver
@@ -206,6 +208,8 @@ environments:
     production:
         # escluster: kbplusg3
         eshost: "${elasticsearch.service:eskbplusg3}"
+        features:
+            export: "OFF"
         dataSource:
             dbCreate: update
             # driverClassName: com.mysql.jdbc.Driver
