--- a/dev/docker-compose-dev-setup.yml
+++ b/dev/docker-compose-dev-setup.yml
@@ -8,13 +8,11 @@ services:
 
   # https://www.elastic.co/guide/en/elasticsearch/reference/5.6/docker.html
   # https://github.com/k-int/KBPlusG3/blob/dev-integration/SETUP-ES-DOCKER.txt
-  # see https://www.elastic.co/guide/en/elasticsearch/reference/5.6/docker.html
-  # see https://www.elastic.co/guide/en/elasticsearch/reference/current/docker.html
+  # https://www.elastic.co/guide/en/elasticsearch/reference/5.6/docker.html
+  # https://www.elastic.co/guide/en/elasticsearch/reference/current/docker.html
   jc_es6:
     container_name: jc_es6
-    # image: docker.elastic.co/elasticsearch/elasticsearch:6.5.1
-    # image: docker.elastic.co/elasticsearch/elasticsearch:6.6.1
-    image: docker.elastic.co/elasticsearch/elasticsearch:7.17.9
+    image: docker.elastic.co/elasticsearch/elasticsearch:7.17.18
     restart: 'no'
     environment:
       - bootstrap.memory_lock=true
@@ -27,7 +25,6 @@ services:
         hard: -1
     ports:
       - 9200:9200 
-      - 9300:9300
     volumes:
       - jc_esdata:/usr/share/elasticsearch/data
     networks:
@@ -39,12 +36,24 @@ services:
   # Connect with mysql --protocol=tcp -h localhost -u k-int -p kbplus700dev
   jc_mysql:
     container_name: jc_mysql
-    image: mariadb:10
+    image: mariadb:11
     restart: 'no'
     environment:
       MYSQL_ROOT_PASSWORD: jc
+      MARIADB_USER: admin
     volumes:
       - jc_mysqldata:/var/lib/mysql
       - ./mysqlinit:/docker-entrypoint-initdb.d
+    healthcheck:
+      interval: 30s
+      retries: 3
+      test:
+        [
+          "CMD",
+          "healthcheck.sh",
+          "--connect",
+          "--innodb_initialized"
+        ]
+      timeout: 30s
     ports:
       - 3306:3306
